Anirudh | adding new data loader

--- a/sequence_labelling/src/misc.ipynb
+++ b/sequence_labelling/src/misc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "id": "0d3e408a",
    "metadata": {},
    "outputs": [],
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "id": "3c4e6388",
    "metadata": {},
    "outputs": [],
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "id": "e76208e0",
    "metadata": {},
    "outputs": [],
@@ -714,6 +714,27 @@
    ],
    "source": [
     "labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "86e0d230",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['▁आपका', '▁स', 'वागत', '▁हैं']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.tokenize(\"आपका स्वागत हैं\")"
    ]
   },
   {
@@ -846,7 +867,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
