Anirudh | adding trainer

--- a/sequence_labelling/src/misc.ipynb
+++ b/sequence_labelling/src/misc.ipynb
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "id": "8a7ce639",
    "metadata": {},
    "outputs": [
@@ -682,6 +682,63 @@
     "                                                   num_labels=5,\n",
     "                                                   output_attentions=False,\n",
     "                                                   output_hidden_states=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "245431bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AlbertForTokenClassification(\n",
+       "  (albert): AlbertModel(\n",
+       "    (embeddings): AlbertEmbeddings(\n",
+       "      (word_embeddings): Embedding(200000, 128, padding_idx=0)\n",
+       "      (position_embeddings): Embedding(512, 128)\n",
+       "      (token_type_embeddings): Embedding(2, 128)\n",
+       "      (LayerNorm): LayerNorm((128,), eps=1e-12, elementwise_affine=True)\n",
+       "      (dropout): Dropout(p=0, inplace=False)\n",
+       "    )\n",
+       "    (encoder): AlbertTransformer(\n",
+       "      (embedding_hidden_mapping_in): Linear(in_features=128, out_features=768, bias=True)\n",
+       "      (albert_layer_groups): ModuleList(\n",
+       "        (0): AlbertLayerGroup(\n",
+       "          (albert_layers): ModuleList(\n",
+       "            (0): AlbertLayer(\n",
+       "              (full_layer_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "              (attention): AlbertAttention(\n",
+       "                (query): Linear(in_features=768, out_features=768, bias=True)\n",
+       "                (key): Linear(in_features=768, out_features=768, bias=True)\n",
+       "                (value): Linear(in_features=768, out_features=768, bias=True)\n",
+       "                (attention_dropout): Dropout(p=0, inplace=False)\n",
+       "                (output_dropout): Dropout(p=0, inplace=False)\n",
+       "                (dense): Linear(in_features=768, out_features=768, bias=True)\n",
+       "                (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "              )\n",
+       "              (ffn): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "              (ffn_output): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "              (dropout): Dropout(p=0, inplace=False)\n",
+       "            )\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (dropout): Dropout(p=0, inplace=False)\n",
+       "  (classifier): Linear(in_features=768, out_features=5, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
    ]
   },
   {
@@ -719,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "86e0d230",
+   "id": "deee5f38",
    "metadata": {},
    "outputs": [
     {
